<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group7.tcss450.uw.edu.challengeapp.LogInFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_textView"
        android:textSize="@dimen/log_in_textView_size"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/log_in_display_text"
            android:ems="10"
            android:id="@+id/log_in_editText"
            android:background="@drawable/customborder"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/log_in_editText"
            android:id="@+id/spacer_1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pw_display_text"
            android:ems="10"
            android:id="@+id/pw_editText"
            android:layout_below = "@+id/spacer_1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/customborder"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/pw_editText"
            android:id="@+id/spacer_2"/>

        <Button
            android:text="@string/display_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display_login_results_button"
            android:layout_below = "@+id/spacer_2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/customborder"/>

    </RelativeLayout>

</RelativeLayout>
