<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group7.tcss450.uw.edu.challengeapp.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textView"
        android:textSize="@dimen/log_in_textView_size"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:text="@string/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:background="@drawable/customborder"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/loginButton"
            android:id="@+id/spacer_1"/>

        <Button
            android:text="@string/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below = "@+id/spacer_1"
            android:layout_centerHorizontal="true"
            android:id="@+id/regButton"

            android:background="@drawable/customborder" />

    </RelativeLayout>

</RelativeLayout>
